--- a/javascript/global.css
+++ b/javascript/global.css
@@ -1,13 +1,12 @@
 @media screen and (width >= 768px) {
     .extra-details {
-        max-width: 85vw;
+        max-width: 90vw !important;
     }
 
     .gradio-markdown .code_wrap {
         background-color: rgb(128 128 128 / 0.3);
         padding: 0.25rem;
         overflow-x: scroll;
-        max-width: 80%;
 
         & .copy_code_button {
             display: none;
